@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Company {
  -designation
}

Class TestStore {
  -testParam
  -parameter
}

class Test {
  -nhsCode;
  -internalCode;
  -client;
  -testType;
  -sampleCollectionMethod;
  -parameterCategory;
  -parameter;
  -samples
  -registrationDate;
  -samplesCollectionDate;
  -chemicalAnalysisDate;
  -diagnosisDate;
  -validationDate;
}

class Client {
  -name
  -address
  -phoneNumber
  -eMail
  -sex
  -cnn
  -nhsNumber
  -birthDate
  -tin
}

Class TestResult {
  -referenceValue
  -result
  -parameter
}

Class Report {
  -reportText
}

Company "1" -- "1..*" TestStore : has >
Company "1" -- "*" Client : has >
TestStore "1" -- "*" Test : has >
Client "1" -- "1..*" Test : performs >
Test "1" -- "1" TestResult : have >
Test "1" -- "1" Report : have >
@enduml